# soleur

./: .doppler.yaml  .gitignore  .gitleaks.toml  .markdownlint.json  .markdownlintignore  .mcp.json  AGENTS.core.md  AGENTS.docs.md  AGENTS.md  AGENTS.rest.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  bunfig.toml  cla-smoke-test.md  cla-test.md  codecov.yml  eleventy.config.js  feature-request-plugin-dir-settings.md  filter-lcov.sh  lefthook.yml  package-lock.json  package.json  pricing-wireframe.pen  renovate.json5
.claude/: phase-surface-map.json  playwright-mcp.config.json  rule-body-hashes.txt  rule-weakening-acks.txt  settings.json  settings.local.json
.claude-plugin/: marketplace.json
.gemini/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  enforcement-contracts.json
.grok/: config.toml
.openhands/: hooks.json
LICENSES/: hallmark.MIT.txt  skill-security-auditor.MIT.txt
knowledge-base/: INDEX.md  constitution.md  kb-categories.txt  kb-tags.txt
openspec/: config.yaml
plugins/: soleur
scripts/: _agents_md_sections.py  add-preflight-perms.awk  agents-anchor-ignore.txt  audit-bot-codeql-coverage.sh  audit-ruleset-bypass.sh  backfill-frontmatter.py  backfill-rule-ids.py  betterstack-query.sh  check-adr-ordinals.sh  check-pa-22.sh  ci-cla-required-ruleset-canonical-bypass-actors.json  ci-cla-required-ruleset-canonical-required-status-checks.json  ci-required-ruleset-canonical-bypass-actors.json  ci-required-ruleset-canonical-required-status-checks.json  compound-promote.sh  compound-promote.test.sh  (+107 more)
(+14009 files in other folders)
