[package]
name = "soleur"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
dirs = "6"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rustyline = "15"
toml = "0.8"
futures = "0.3"
tokio-stream = "0.1"
regex = "1"

[dev-dependencies]
tempfile = "3"
